 implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

		----------------------------------

GLOBAL NEWS - User visible changes.

Version 4.1.0a

incompatible changes

* global: rename the -i(incremental) option to -u(update) and the new
  -i(--ignore-case) option added. Sorry for my incompatible change from
  the older version. But I believe it should be so.

other changes

* htags: create bless.sh when the -S option specified.
* htags: config variables prolog_script, epilog_script, show_position,
  position_begin, position_end and icase_path added.
* htags: path name search facility added.
* htags: locate dbpath like global(1) does.
* htags: show addtional information on status bar.
* gtags: the -i option also locate tag files among cadedite directories.
* global, gtags: make icase_path allways enable in Windows32 environment.
* global: the -T(--through) option added.
* gtags, htags: --gtagsconf option added.
* global.conf: 'htags_options' added.
* globa.texi: the method to use vim with GLOBAL added.

Version 4.0.1 - September 26, 2000, by Shigio Yamaguchi

* htags: shut a security hole in global.cgi.

Version 4.0 - September 3, 2000, by Shigio Yamaguchi

incompatible changes

* htags: doesn't make frame tags(<FRAME>...</FRAME>) by default to reduce
  dependency on javascript.
  Instead, you can use the new -F (--frame) option to make framed hypertext.
* htags: -h option removed. Instead, htags displays the path of source file
  at browser's status bar by default if javascript is enabled.
* global.conf: 'bgcolor','text','link','vlink','alink' are removed.
  Instead, 'body_begin','body_end','table_begin','table_end' are added.
  You can write removed items into 'body_begin' directly.
* nvi-1.79-gtags.diff: new patch for nvi-1.79.
  ':rtag' command is removed. Instead, please use ':tag -r' command.
  Now you can use all commands and options of global(1) from nvi editor
  except for -c (--completion), -i (incremental), -p (print-dbpath),