@@ -170,7 +170,7 @@ Tag file for function references.
 Tag file for symbols other then functions.
 .It Pa GPATH
 Tag file for path of source files.
-.It Pa /etc/global.conf $HOME/.globalrc
+.It Pa /etc/gtags.conf $HOME/.globalrc
 Configuration file.
 .El
 .Sh ENVIRONMENT
